parser.output
Grammar

    0 $accept: program $end

    1 program: var_decl_list func_decl_list body '.'

    2 var_decl_list: var_decl var_decl_list
    3              | %empty

    4 var_decl: id_list ':' type ';'

    5 @1: %empty

    6 id_list: ID @1 ',' id_list
    7        | ID

    8 type: INTEGER
    9     | REAL
   10     | STRING
   11     | BOOLEAN
   12     | VOID

   13 func_decl_list: func_decl func_decl_list
   14               | %empty

   15 @2: %empty

   16 func_decl: FUNC ID @2 '(' opt_param_list ')' ':' type var_decl_list body ';'

   17 opt_param_list: param_list
   18               | %empty

   19 param_list: param_decl ',' param_list
   20           | param_decl

   21 @3: %empty

   22 param_decl: ID @3 ':' type

   23 body: BODY stat_list END

   24 stat_list: stat ';' stat_list
   25          | stat ';'

   26 stat: assign_stat
   27     | if_stat
   28     | while_stat
   29     | for_stat
   30     | return_stat
   31     | read_stat
   32     | write_stat
   33     | func_call
   34     | BREAK

   35 @4: %empty

   36 assign_stat: ID @4 EQUAL opt_new_expr

   37 opt_new_expr: NEW '(' expr ')'
   38             | expr

   39 if_stat: IF expr THEN stat_list opt_else_stat END

   40 opt_else_stat: ELSE stat_list
   41              | %empty

   42 while_stat: WHILE expr DO stat_list END

   43 @5: %empty

   44 for_stat: FOR ID @5 EQUAL expr TO expr DO stat_list END

   45 return_stat: RETURN opt_expr

   46 opt_expr: expr
   47         | %empty

   48 read_stat: READ '(' id_list ')'

   49 write_stat: write_op '(' expr_list ')'

   50 write_op: WRITE
   51         | WRITELN

   52 expr_list: expr ',' expr_list
   53          | expr

   54 expr: expr logic_op bool_term
   55     | bool_term

   56 logic_op: AND
   57         | OR

   58 bool_term: rel_term rel_op rel_term
   59          | rel_term

   60 rel_op: EQU
   61       | NEQ
   62       | GRT
   63       | GEQ
   64       | LSS
   65       | LEQ

   66 rel_term: rel_term low_prec_op low_term
   67         | low_term

   68 low_prec_op: PLUS
   69            | MINUS

   70 low_term: low_term high_prec_op factor
   71         | factor

   72 high_prec_op: STAR
   73             | DIV

   74 factor: unary_op factor
   75       | '(' expr ')'
   76       | ID

   77 @6: %empty

   78 factor: ADDR ID @6
   79       | const
   80       | func_call
   81       | cond_expr
   82       | cast '(' expr ')'

   83 unary_op: MINUS
   84         | NOT

   85 const: INTCONST
   86      | REALCONST
   87      | STRCONST
   88      | BOOLCONST

   89 @7: %empty

   90 func_call: ID @7 '(' opt_expr_list ')'

   91 opt_expr_list: expr_list
   92              | %empty

   93 cond_expr: IF expr THEN expr ELSE expr END

   94 cast: INTEGER
   95     | REAL


Terminals, with rules where they appear

$end (0) 0
'(' (40) 16 37 48 49 75 82 90
')' (41) 16 37 48 49 75 82 90
',' (44) 6 19 52
'.' (46) 1
':' (58) 4 16 22
';' (59) 4 16 24 25
error (256)
INTEGER (258) 8 94
REAL (259) 9 95
STRING (260) 10
BOOLEAN (261) 11
VOID (262) 12
ID (263) 6 7 16 22 36 44 76 78 90
FUNC (264) 16
BODY (265) 23
END (266) 23 39 42 44 93
BREAK (267) 34
EQU (268) 60
NEQ (269) 61
GEQ (270) 63
LEQ (271) 65
AND (272) 56
OR (273) 57
IF (274) 39 93
ELSE (275) 40 93
INTCONST (276) 85
NOT (277) 84
REALCONST (278) 86
STRCONST (279) 87
THEN (280) 39 93
BOOLCONST (281) 88
DO (282) 42 44
FOR (283) 44
READ (284) 48
RETURN (285) 45
TO (286) 44
WHILE (287) 42
GRT (288) 62
LSS (289) 64
WRITE (290) 50
WRITELN (291) 51
PLUS (292) 68
STAR (293) 72
MINUS (294) 69 83
EQUAL (295) 36 44
DIV (296) 73
ADDR (297) 78
NEW (298) 37


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
program (51)
    on left: 1, on right: 0
var_decl_list (52)
    on left: 2 3, on right: 1 2 16
var_decl (53)
    on left: 4, on right: 2
id_list (54)
    on left: 6 7, on right: 4 6 48
@1 (55)
    on left: 5, on right: 6
type (56)
    on left: 8 9 10 11 12, on right: 4 16 22
func_decl_list (57)
    on left: 13 14, on right: 1 13
func_decl (58)
    on left: 16, on right: 13
@2 (59)
    on left: 15, on right: 16
opt_param_list (60)
    on left: 17 18, on right: 16
param_list (61)
    on left: 19 20, on right: 17 19
param_decl (62)
    on left: 22, on right: 19 20
@3 (63)
    on left: 21, on right: 22
body (64)
    on left: 23, on right: 1 16
stat_list (65)
    on left: 24 25, on right: 23 24 39 40 42 44
stat (66)
    on left: 26 27 28 29 30 31 32 33 34, on right: 24 25
assign_stat (67)
    on left: 36, on right: 26
@4 (68)
    on left: 35, on right: 36
opt_new_expr (69)
    on left: 37 38, on right: 36
if_stat (70)
    on left: 39, on right: 27
opt_else_stat (71)
    on left: 40 41, on right: 39
while_stat (72)
    on left: 42, on right: 28
for_stat (73)
    on left: 44, on right: 29
@5 (74)
    on left: 43, on right: 44
return_stat (75)
    on left: 45, on right: 30
opt_expr (76)
    on left: 46 47, on right: 45
read_stat (77)
    on left: 48, on right: 31
write_stat (78)
    on left: 49, on right: 32
write_op (79)
    on left: 50 51, on right: 49
expr_list (80)
    on left: 52 53, on right: 49 52 91
expr (81)
    on left: 54 55, on right: 37 38 39 42 44 46 52 53 54 75 82 93
logic_op (82)
    on left: 56 57, on right: 54
bool_term (83)
    on left: 58 59, on right: 54 55
rel_op (84)
    on left: 60 61 62 63 64 65, on right: 58
rel_term (85)
    on left: 66 67, on right: 58 59 66
low_prec_op (86)
    on left: 68 69, on right: 66
low_term (87)
    on left: 70 71, on right: 66 67 70
high_prec_op (88)
    on left: 72 73, on right: 70
factor (89)
    on left: 74 75 76 78 79 80 81 82, on right: 70 71 74
@6 (90)
    on left: 77, on right: 78
unary_op (91)
    on left: 83 84, on right: 74
const (92)
    on left: 85 86 87 88, on right: 79
func_call (93)
    on left: 90, on right: 33 80
@7 (94)
    on left: 89, on right: 90
opt_expr_list (95)
    on left: 91 92, on right: 90
cond_expr (96)
    on left: 93, on right: 81
cast (97)
    on left: 94 95, on right: 82


State 0

    0 $accept: . program $end

    ID  shift, and go to state 1

    $default  reduce using rule 3 (var_decl_list)

    program        go to state 2
    var_decl_list  go to state 3
    var_decl       go to state 4
    id_list        go to state 5


State 1

    6 id_list: ID . @1 ',' id_list
    7        | ID .

    ','       reduce using rule 5 (@1)
    $default  reduce using rule 7 (id_list)

    @1  go to state 6


State 2

    0 $accept: program . $end

    $end  shift, and go to state 7


State 3

    1 program: var_decl_list . func_decl_list body '.'

    FUNC  shift, and go to state 8

    $default  reduce using rule 14 (func_decl_list)

    func_decl_list  go to state 9
    func_decl       go to state 10


State 4

    2 var_decl_list: var_decl . var_decl_list

    ID  shift, and go to state 1

    $default  reduce using rule 3 (var_decl_list)

    var_decl_list  go to state 11
    var_decl       go to state 4
    id_list        go to state 5


State 5

    4 var_decl: id_list . ':' type ';'

    ':'  shift, and go to state 12


State 6

    6 id_list: ID @1 . ',' id_list

    ','  shift, and go to state 13


State 7

    0 $accept: program $end .

    $default  accept


State 8

   16 func_decl: FUNC . ID @2 '(' opt_param_list ')' ':' type var_decl_list body ';'

    ID  shift, and go to state 14


State 9

    1 program: var_decl_list func_decl_list . body '.'

    BODY  shift, and go to state 15

    body  go to state 16


State 10

   13 func_decl_list: func_decl . func_decl_list

    FUNC  shift, and go to state 8

    $default  reduce using rule 14 (func_decl_list)

    func_decl_list  go to state 17
    func_decl       go to state 10


State 11

    2 var_decl_list: var_decl var_decl_list .

    $default  reduce using rule 2 (var_decl_list)


State 12

    4 var_decl: id_list ':' . type ';'

    INTEGER  shift, and go to state 18
    REAL     shift, and go to state 19
    STRING   shift, and go to state 20
    BOOLEAN  shift, and go to state 21
    VOID     shift, and go to state 22

    type  go to state 23


State 13

    6 id_list: ID @1 ',' . id_list

    ID  shift, and go to state 1

    id_list  go to state 24


State 14

   16 func_decl: FUNC ID . @2 '(' opt_param_list ')' ':' type var_decl_list body ';'

    $default  reduce using rule 15 (@2)

    @2  go to state 25


State 15

   23 body: BODY . stat_list END

    ID       shift, and go to state 26
    BREAK    shift, and go to state 27
    IF       shift, and go to state 28
    FOR      shift, and go to state 29
    READ     shift, and go to state 30
    RETURN   shift, and go to state 31
    WHILE    shift, and go to state 32
    WRITE    shift, and go to state 33
    WRITELN  shift, and go to state 34

    stat_list    go to state 35
    stat         go to state 36
    assign_stat  go to state 37
    if_stat      go to state 38
    while_stat   go to state 39
    for_stat     go to state 40
    return_stat  go to state 41
    read_stat    go to state 42
    write_stat   go to state 43
    write_op     go to state 44
    func_call    go to state 45


State 16

    1 program: var_decl_list func_decl_list body . '.'

    '.'  shift, and go to state 46


State 17

   13 func_decl_list: func_decl func_decl_list .

    $default  reduce using rule 13 (func_decl_list)


State 18

    8 type: INTEGER .

    $default  reduce using rule 8 (type)


State 19

    9 type: REAL .

    $default  reduce using rule 9 (type)


State 20

   10 type: STRING .

    $default  reduce using rule 10 (type)


State 21

   11 type: BOOLEAN .

    $default  reduce using rule 11 (type)


State 22

   12 type: VOID .

    $default  reduce using rule 12 (type)


State 23

    4 var_decl: id_list ':' type . ';'

    ';'  shift, and go to state 47


State 24

    6 id_list: ID @1 ',' id_list .

    $default  reduce using rule 6 (id_list)


State 25

   16 func_decl: FUNC ID @2 . '(' opt_param_list ')' ':' type var_decl_list body ';'

    '('  shift, and go to state 48


State 26

   36 assign_stat: ID . @4 EQUAL opt_new_expr
   90 func_call: ID . @7 '(' opt_expr_list ')'

    '('       reduce using rule 89 (@7)
    $default  reduce using rule 35 (@4)

    @4  go to state 49
    @7  go to state 50


State 27

   34 stat: BREAK .

    $default  reduce using rule 34 (stat)


State 28

   39 if_stat: IF . expr THEN stat_list opt_else_stat END

    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    ID         shift, and go to state 53
    IF         shift, and go to state 54
    INTCONST   shift, and go to state 55
    NOT        shift, and go to state 56
    REALCONST  shift, and go to state 57
    STRCONST   shift, and go to state 58
    BOOLCONST  shift, and go to state 59
    MINUS      shift, and go to state 60
    ADDR       shift, and go to state 61
    '('        shift, and go to state 62

    expr       go to state 63
    bool_term  go to state 64
    rel_term   go to state 65
    low_term   go to state 66
    factor     go to state 67
    unary_op   go to state 68
    const      go to state 69
    func_call  go to state 70
    cond_expr  go to state 71
    cast       go to state 72


State 29

   44 for_stat: FOR . ID @5 EQUAL expr TO expr DO stat_list END

    ID  shift, and go to state 73


State 30

   48 read_stat: READ . '(' id_list ')'

    '('  shift, and go to state 74


State 31

   45 return_stat: RETURN . opt_expr

    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    ID         shift, and go to state 53
    IF         shift, and go to state 54
    INTCONST   shift, and go to state 55
    NOT        shift, and go to state 56
    REALCONST  shift, and go to state 57
    STRCONST   shift, and go to state 58
    BOOLCONST  shift, and go to state 59
    MINUS      shift, and go to state 60
    ADDR       shift, and go to state 61
    '('        shift, and go to state 62

    $default  reduce using rule 47 (opt_expr)

    opt_expr   go to state 75
    expr       go to state 76
    bool_term  go to state 64
    rel_term   go to state 65
    low_term   go to state 66
    factor     go to state 67
    unary_op   go to state 68
    const      go to state 69
    func_call  go to state 70
    cond_expr  go to state 71
    cast       go to state 72


State 32

   42 while_stat: WHILE . expr DO stat_list END

    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    ID         shift, and go to state 53
    IF         shift, and go to state 54
    INTCONST   shift, and go to state 55
    NOT        shift, and go to state 56
    REALCONST  shift, and go to state 57
    STRCONST   shift, and go to state 58
    BOOLCONST  shift, and go to state 59
    MINUS      shift, and go to state 60
    ADDR       shift, and go to state 61
    '('        shift, and go to state 62

    expr       go to state 77
    bool_term  go to state 64
    rel_term   go to state 65
    low_term   go to state 66
    factor     go to state 67
    unary_op   go to state 68
    const      go to state 69
    func_call  go to state 70
    cond_expr  go to state 71
    cast       go to state 72


State 33

   50 write_op: WRITE .

    $default  reduce using rule 50 (write_op)


State 34

   51 write_op: WRITELN .

    $default  reduce using rule 51 (write_op)


State 35

   23 body: BODY stat_list . END

    END  shift, and go to state 78


State 36

   24 stat_list: stat . ';' stat_list
   25          | stat . ';'

    ';'  shift, and go to state 79


State 37

   26 stat: assign_stat .

    $default  reduce using rule 26 (stat)


State 38

   27 stat: if_stat .

    $default  reduce using rule 27 (stat)


State 39

   28 stat: while_stat .

    $default  reduce using rule 28 (stat)


State 40

   29 stat: for_stat .

    $default  reduce using rule 29 (stat)


State 41

   30 stat: return_stat .

    $default  reduce using rule 30 (stat)


State 42

   31 stat: read_stat .

    $default  reduce using rule 31 (stat)


State 43

   32 stat: write_stat .

    $default  reduce using rule 32 (stat)


State 44

   49 write_stat: write_op . '(' expr_list ')'

    '('  shift, and go to state 80


State 45

   33 stat: func_call .

    $default  reduce using rule 33 (stat)


State 46

    1 program: var_decl_list func_decl_list body '.' .

    $default  reduce using rule 1 (program)


State 47

    4 var_decl: id_list ':' type ';' .

    $default  reduce using rule 4 (var_decl)


State 48

   16 func_decl: FUNC ID @2 '(' . opt_param_list ')' ':' type var_decl_list body ';'

    ID  shift, and go to state 81

    $default  reduce using rule 18 (opt_param_list)

    opt_param_list  go to state 82
    param_list      go to state 83
    param_decl      go to state 84


State 49

   36 assign_stat: ID @4 . EQUAL opt_new_expr

    EQUAL  shift, and go to state 85


State 50

   90 func_call: ID @7 . '(' opt_expr_list ')'

    '('  shift, and go to state 86


State 51

   94 cast: INTEGER .

    $default  reduce using rule 94 (cast)


State 52

   95 cast: REAL .

    $default  reduce using rule 95 (cast)


State 53

   76 factor: ID .
   90 func_call: ID . @7 '(' opt_expr_list ')'

    '('       reduce using rule 89 (@7)
    $default  reduce using rule 76 (factor)

    @7  go to state 50


State 54

   93 cond_expr: IF . expr THEN expr ELSE expr END

    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    ID         shift, and go to state 53
    IF         shift, and go to state 54
    INTCONST   shift, and go to state 55
    NOT        shift, and go to state 56
    REALCONST  shift, and go to state 57
    STRCONST   shift, and go to state 58
    BOOLCONST  shift, and go to state 59
    MINUS      shift, and go to state 60
    ADDR       shift, and go to state 61
    '('        shift, and go to state 62

    expr       go to state 87
    bool_term  go to state 64
    rel_term   go to state 65
    low_term   go to state 66
    factor     go to state 67
    unary_op   go to state 68
    const      go to state 69
    func_call  go to state 70
    cond_expr  go to state 71
    cast       go to state 72


State 55

   85 const: INTCONST .

    $default  reduce using rule 85 (const)


State 56

   84 unary_op: NOT .

    $default  reduce using rule 84 (unary_op)


State 57

   86 const: REALCONST .

    $default  reduce using rule 86 (const)


State 58

   87 const: STRCONST .

    $default  reduce using rule 87 (const)


State 59

   88 const: BOOLCONST .

    $default  reduce using rule 88 (const)


State 60

   83 unary_op: MINUS .

    $default  reduce using rule 83 (unary_op)


State 61

   78 factor: ADDR . ID @6

    ID  shift, and go to state 88


State 62

   75 factor: '(' . expr ')'

    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    ID         shift, and go to state 53
    IF         shift, and go to state 54
    INTCONST   shift, and go to state 55
    NOT        shift, and go to state 56
    REALCONST  shift, and go to state 57
    STRCONST   shift, and go to state 58
    BOOLCONST  shift, and go to state 59
    MINUS      shift, and go to state 60
    ADDR       shift, and go to state 61
    '('        shift, and go to state 62

    expr       go to state 89
    bool_term  go to state 64
    rel_term   go to state 65
    low_term   go to state 66
    factor     go to state 67
    unary_op   go to state 68
    const      go to state 69
    func_call  go to state 70
    cond_expr  go to state 71
    cast       go to state 72


State 63

   39 if_stat: IF expr . THEN stat_list opt_else_stat END
   54 expr: expr . logic_op bool_term

    AND   shift, and go to state 90
    OR    shift, and go to state 91
    THEN  shift, and go to state 92

    logic_op  go to state 93


State 64

   55 expr: bool_term .

    $default  reduce using rule 55 (expr)


State 65

   58 bool_term: rel_term . rel_op rel_term
   59          | rel_term .
   66 rel_term: rel_term . low_prec_op low_term

    EQU    shift, and go to state 94
    NEQ    shift, and go to state 95
    GEQ    shift, and go to state 96
    LEQ    shift, and go to state 97
    GRT    shift, and go to state 98
    LSS    shift, and go to state 99
    PLUS   shift, and go to state 100
    MINUS  shift, and go to state 101

    $default  reduce using rule 59 (bool_term)

    rel_op       go to state 102
    low_prec_op  go to state 103


State 66

   67 rel_term: low_term .
   70 low_term: low_term . high_prec_op factor

    STAR  shift, and go to state 104
    DIV   shift, and go to state 105

    $default  reduce using rule 67 (rel_term)

    high_prec_op  go to state 106


State 67

   71 low_term: factor .

    $default  reduce using rule 71 (low_term)


State 68

   74 factor: unary_op . factor

    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    ID         shift, and go to state 53
    IF         shift, and go to state 54
    INTCONST   shift, and go to state 55
    NOT        shift, and go to state 56
    REALCONST  shift, and go to state 57
    STRCONST   shift, and go to state 58
    BOOLCONST  shift, and go to state 59
    MINUS      shift, and go to state 60
    ADDR       shift, and go to state 61
    '('        shift, and go to state 62

    factor     go to state 107
    unary_op   go to state 68
    const      go to state 69
    func_call  go to state 70
    cond_expr  go to state 71
    cast       go to state 72


State 69

   79 factor: const .

    $default  reduce using rule 79 (factor)


State 70

   80 factor: func_call .

    $default  reduce using rule 80 (factor)


State 71

   81 factor: cond_expr .

    $default  reduce using rule 81 (factor)


State 72

   82 factor: cast . '(' expr ')'

    '('  shift, and go to state 108


State 73

   44 for_stat: FOR ID . @5 EQUAL expr TO expr DO stat_list END

    $default  reduce using rule 43 (@5)

    @5  go to state 109


State 74

   48 read_stat: READ '(' . id_list ')'

    ID  shift, and go to state 1

    id_list  go to state 110


State 75

   45 return_stat: RETURN opt_expr .

    $default  reduce using rule 45 (return_stat)


State 76

   46 opt_expr: expr .
   54 expr: expr . logic_op bool_term

    AND  shift, and go to state 90
    OR   shift, and go to state 91

    $default  reduce using rule 46 (opt_expr)

    logic_op  go to state 93


State 77

   42 while_stat: WHILE expr . DO stat_list END
   54 expr: expr . logic_op bool_term

    AND  shift, and go to state 90
    OR   shift, and go to state 91
    DO   shift, and go to state 111

    logic_op  go to state 93


State 78

   23 body: BODY stat_list END .

    $default  reduce using rule 23 (body)


State 79

   24 stat_list: stat ';' . stat_list
   25          | stat ';' .

    ID       shift, and go to state 26
    BREAK    shift, and go to state 27
    IF       shift, and go to state 28
    FOR      shift, and go to state 29
    READ     shift, and go to state 30
    RETURN   shift, and go to state 31
    WHILE    shift, and go to state 32
    WRITE    shift, and go to state 33
    WRITELN  shift, and go to state 34

    $default  reduce using rule 25 (stat_list)

    stat_list    go to state 112
    stat         go to state 36
    assign_stat  go to state 37
    if_stat      go to state 38
    while_stat   go to state 39
    for_stat     go to state 40
    return_stat  go to state 41
    read_stat    go to state 42
    write_stat   go to state 43
    write_op     go to state 44
    func_call    go to state 45


State 80

   49 write_stat: write_op '(' . expr_list ')'

    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    ID         shift, and go to state 53
    IF         shift, and go to state 54
    INTCONST   shift, and go to state 55
    NOT        shift, and go to state 56
    REALCONST  shift, and go to state 57
    STRCONST   shift, and go to state 58
    BOOLCONST  shift, and go to state 59
    MINUS      shift, and go to state 60
    ADDR       shift, and go to state 61
    '('        shift, and go to state 62

    expr_list  go to state 113
    expr       go to state 114
    bool_term  go to state 64
    rel_term   go to state 65
    low_term   go to state 66
    factor     go to state 67
    unary_op   go to state 68
    const      go to state 69
    func_call  go to state 70
    cond_expr  go to state 71
    cast       go to state 72


State 81

   22 param_decl: ID . @3 ':' type

    $default  reduce using rule 21 (@3)

    @3  go to state 115


State 82

   16 func_decl: FUNC ID @2 '(' opt_param_list . ')' ':' type var_decl_list body ';'

    ')'  shift, and go to state 116


State 83

   17 opt_param_list: param_list .

    $default  reduce using rule 17 (opt_param_list)


State 84

   19 param_list: param_decl . ',' param_list
   20           | param_decl .

    ','  shift, and go to state 117

    $default  reduce using rule 20 (param_list)


State 85

   36 assign_stat: ID @4 EQUAL . opt_new_expr

    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    ID         shift, and go to state 53
    IF         shift, and go to state 54
    INTCONST   shift, and go to state 55
    NOT        shift, and go to state 56
    REALCONST  shift, and go to state 57
    STRCONST   shift, and go to state 58
    BOOLCONST  shift, and go to state 59
    MINUS      shift, and go to state 60
    ADDR       shift, and go to state 61
    NEW        shift, and go to state 118
    '('        shift, and go to state 62

    opt_new_expr  go to state 119
    expr          go to state 120
    bool_term     go to state 64
    rel_term      go to state 65
    low_term      go to state 66
    factor        go to state 67
    unary_op      go to state 68
    const         go to state 69
    func_call     go to state 70
    cond_expr     go to state 71
    cast          go to state 72


State 86

   90 func_call: ID @7 '(' . opt_expr_list ')'

    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    ID         shift, and go to state 53
    IF         shift, and go to state 54
    INTCONST   shift, and go to state 55
    NOT        shift, and go to state 56
    REALCONST  shift, and go to state 57
    STRCONST   shift, and go to state 58
    BOOLCONST  shift, and go to state 59
    MINUS      shift, and go to state 60
    ADDR       shift, and go to state 61
    '('        shift, and go to state 62

    $default  reduce using rule 92 (opt_expr_list)

    expr_list      go to state 121
    expr           go to state 114
    bool_term      go to state 64
    rel_term       go to state 65
    low_term       go to state 66
    factor         go to state 67
    unary_op       go to state 68
    const          go to state 69
    func_call      go to state 70
    opt_expr_list  go to state 122
    cond_expr      go to state 71
    cast           go to state 72


State 87

   54 expr: expr . logic_op bool_term
   93 cond_expr: IF expr . THEN expr ELSE expr END

    AND   shift, and go to state 90
    OR    shift, and go to state 91
    THEN  shift, and go to state 123

    logic_op  go to state 93


State 88

   78 factor: ADDR ID . @6

    $default  reduce using rule 77 (@6)

    @6  go to state 124


State 89

   54 expr: expr . logic_op bool_term
   75 factor: '(' expr . ')'

    AND  shift, and go to state 90
    OR   shift, and go to state 91
    ')'  shift, and go to state 125

    logic_op  go to state 93


State 90

   56 logic_op: AND .

    $default  reduce using rule 56 (logic_op)


State 91

   57 logic_op: OR .

    $default  reduce using rule 57 (logic_op)


State 92

   39 if_stat: IF expr THEN . stat_list opt_else_stat END

    ID       shift, and go to state 26
    BREAK    shift, and go to state 27
    IF       shift, and go to state 28
    FOR      shift, and go to state 29
    READ     shift, and go to state 30
    RETURN   shift, and go to state 31
    WHILE    shift, and go to state 32
    WRITE    shift, and go to state 33
    WRITELN  shift, and go to state 34
